AFoods-PSE-Item Code Type

--- a/src/Reports/AFDPSalesProformaInvoice.rdl
+++ b/src/Reports/AFDPSalesProformaInvoice.rdl
@@ -875,6 +875,7 @@
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>8pt</FontSize>
                                     <FontWeight>Normal</FontWeight>
+                                    <Format>#,0;(#,0)</Format>
                                   </Style>
                                 </TextRun>
                               </TextRuns>
@@ -896,6 +897,7 @@
                             <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
+                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                     <TablixCell>
@@ -1217,70 +1219,6 @@
               <Width>2.03707in</Width>
               <Style />
             </Textbox>
-            <Textbox Name="AFI_DocDateLabel">
-              <KeepTogether>true</KeepTogether>
-              <Paragraphs>
-                <Paragraph>
-                  <TextRuns>
-                    <TextRun>
-                      <Value>=Fields!AFIDocumentTitle.Value</Value>
-                      <Style>
-                        <FontFamily>Segoe UI</FontFamily>
-                        <FontSize>8pt</FontSize>
-                      </Style>
-                    </TextRun>
-                    <TextRun>
-                      <Value> Date:</Value>
-                      <Style>
-                        <FontFamily>Segoe UI</FontFamily>
-                        <FontSize>8pt</FontSize>
-                      </Style>
-                    </TextRun>
-                  </TextRuns>
-                  <Style>
-                    <TextAlign>Left</TextAlign>
-                  </Style>
-                </Paragraph>
-              </Paragraphs>
-              <Top>0.94573in</Top>
-              <Left>5.15392in</Left>
-              <Height>11pt</Height>
-              <Width>1.06551in</Width>
-              <ZIndex>1</ZIndex>
-              <Style />
-            </Textbox>
-            <Textbox Name="AFI_DocNoLabel">
-              <KeepTogether>true</KeepTogether>
-              <Paragraphs>
-                <Paragraph>
-                  <TextRuns>
-                    <TextRun>
-                      <Value>=Fields!AFIDocumentTitle.Value</Value>
-                      <Style>
-                        <FontFamily>Segoe UI</FontFamily>
-                        <FontSize>8pt</FontSize>
-                      </Style>
-                    </TextRun>
-                    <TextRun>
-                      <Value> Number:</Value>
-                      <Style>
-                        <FontFamily>Segoe UI</FontFamily>
-                        <FontSize>8pt</FontSize>
-                      </Style>
-                    </TextRun>
-                  </TextRuns>
-                  <Style>
-                    <TextAlign>Left</TextAlign>
-                  </Style>
-                </Paragraph>
-              </Paragraphs>
-              <Top>0.79039in</Top>
-              <Left>5.14907in</Left>
-              <Height>11pt</Height>
-              <Width>1.07036in</Width>
-              <ZIndex>2</ZIndex>
-              <Style />
-            </Textbox>
             <Textbox Name="AFI_DocTitle">
               <KeepTogether>true</KeepTogether>
               <Paragraphs>
@@ -1304,7 +1242,7 @@
               <Left>4.82228in</Left>
               <Height>20.10571pt</Height>
               <Width>2.30717in</Width>
-              <ZIndex>3</ZIndex>
+              <ZIndex>1</ZIndex>
               <Style>
                 <Border />
               </Style>
@@ -1329,7 +1267,7 @@
               <Left>2.57644in</Left>
               <Height>11pt</Height>
               <Width>2.4in</Width>
-              <ZIndex>4</ZIndex>
+              <ZIndex>2</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_SalesPersonLabel">
@@ -1352,7 +1290,7 @@
               <Left>4.89587in</Left>
               <Height>11pt</Height>
               <Width>1.21585in</Width>
-              <ZIndex>5</ZIndex>
+              <ZIndex>3</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_CustomerIdLabel">
@@ -1375,7 +1313,7 @@
               <Left>4.89587in</Left>
               <Height>11pt</Height>
               <Width>1.21585in</Width>
-              <ZIndex>6</ZIndex>
+              <ZIndex>4</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_TermsLabel">
@@ -1399,7 +1337,7 @@
               <Top>2.06438in</Top>
               <Height>11pt</Height>
               <Width>1.63469in</Width>
-              <ZIndex>7</ZIndex>
+              <ZIndex>5</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_ShipViaLabel">
@@ -1423,7 +1361,7 @@
               <Top>1.89784in</Top>
               <Height>11pt</Height>
               <Width>1.63469in</Width>
-              <ZIndex>8</ZIndex>
+              <ZIndex>6</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_SellToLabel">
@@ -1446,7 +1384,7 @@
               <Left>0.02228in</Left>
               <Height>11pt</Height>
               <Width>2.4in</Width>
-              <ZIndex>9</ZIndex>
+              <ZIndex>7</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_DocNo">
@@ -1471,7 +1409,7 @@
               <Left>6.21943in</Left>
               <Height>11pt</Height>
               <Width>0.94379in</Width>
-              <ZIndex>10</ZIndex>
+              <ZIndex>8</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_SalesPerson">
@@ -1496,7 +1434,7 @@
               <Left>6.12079in</Left>
               <Height>11pt</Height>
               <Width>1.03521in</Width>
-              <ZIndex>11</ZIndex>
+              <ZIndex>9</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_CustomerId">
@@ -1521,7 +1459,7 @@
               <Left>6.12079in</Left>
               <Height>11pt</Height>
               <Width>1.03521in</Width>
-              <ZIndex>12</ZIndex>
+              <ZIndex>10</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_Shipto5">
@@ -1546,7 +1484,7 @@
               <Left>2.57644in</Left>
               <Height>11pt</Height>
               <Width>2.40718in</Width>
-              <ZIndex>13</ZIndex>
+              <ZIndex>11</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_Shipto4">
@@ -1571,7 +1509,7 @@
               <Left>2.57644in</Left>
               <Height>11pt</Height>
               <Width>2.4in</Width>
-              <ZIndex>14</ZIndex>
+              <ZIndex>12</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_Shipto3">
@@ -1596,7 +1534,7 @@
               <Left>2.57644in</Left>
               <Height>11pt</Height>
               <Width>2.4in</Width>
-              <ZIndex>15</ZIndex>
+              <ZIndex>13</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_Shipto2">
@@ -1621,7 +1559,7 @@
               <Left>2.57644in</Left>
               <Height>11pt</Height>
               <Width>2.4in</Width>
-              <ZIndex>16</ZIndex>
+              <ZIndex>14</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_Shipto1">
@@ -1646,7 +1584,7 @@
               <Left>2.57644in</Left>
               <Height>11pt</Height>
               <Width>2.4in</Width>
-              <ZIndex>17</ZIndex>
+              <ZIndex>15</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_Terms">
@@ -1671,7 +1609,7 @@
               <Left>1.63468in</Left>
               <Height>11pt</Height>
               <Width>3.23341in</Width>
-              <ZIndex>18</ZIndex>
+              <ZIndex>16</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_ShipVia">
@@ -1696,7 +1634,7 @@
               <Left>1.63469in</Left>
               <Height>11pt</Height>
               <Width>3.2346in</Width>
-              <ZIndex>19</ZIndex>
+              <ZIndex>17</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_SellTo4">
@@ -1721,7 +1659,7 @@
               <Left>0.01865in</Left>
               <Height>11pt</Height>
               <Width>2.40363in</Width>
-              <ZIndex>20</ZIndex>
+              <ZIndex>18</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_SellTo3">
@@ -1746,7 +1684,7 @@
               <Left>0.01865in</Left>
               <Height>11pt</Height>
               <Width>2.40363in</Width>
-              <ZIndex>21</ZIndex>
+              <ZIndex>19</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_SellTo2">
@@ -1771,7 +1709,7 @@
               <Left>0.01865in</Left>
               <Height>11pt</Height>
               <Width>2.40363in</Width>
-              <ZIndex>22</ZIndex>
+              <ZIndex>20</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_SellTo1">
@@ -1796,7 +1734,7 @@
               <Left>0.01865in</Left>
               <Height>11pt</Height>
               <Width>2.40363in</Width>
-              <ZIndex>23</ZIndex>
+              <ZIndex>21</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_CompanyInfo4">
@@ -1821,7 +1759,7 @@
               <Left>2.42228in</Left>
               <Height>11pt</Height>
               <Width>2.4in</Width>
-              <ZIndex>24</ZIndex>
+              <ZIndex>22</ZIndex>
               <Visibility>
                 <Hidden>true</Hidden>
               </Visibility>
@@ -1853,7 +1791,7 @@
               <Left>2.42228in</Left>
               <Height>11pt</Height>
               <Width>2.4in</Width>
-              <ZIndex>25</ZIndex>
+              <ZIndex>23</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_CompanyInfo2">
@@ -1878,7 +1816,7 @@
               <Left>2.42228in</Left>
               <Height>11pt</Height>
               <Width>2.4in</Width>
-              <ZIndex>26</ZIndex>
+              <ZIndex>24</ZIndex>
               <Style>
                 <Border />
               </Style>
@@ -1904,7 +1842,7 @@
               <Left>2.42228in</Left>
               <Height>11pt</Height>
               <Width>2.4in</Width>
-              <ZIndex>27</ZIndex>
+              <ZIndex>25</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_DocLabel">
@@ -1928,7 +1866,7 @@
               <Left>6.21942in</Left>
               <Height>11pt</Height>
               <Width>0.94379in</Width>
-              <ZIndex>28</ZIndex>
+              <ZIndex>26</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_PageNumber">
@@ -1953,7 +1891,7 @@
               <Left>6.88713in</Left>
               <Height>11pt</Height>
               <Width>0.21455in</Width>
-              <ZIndex>29</ZIndex>
+              <ZIndex>27</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_DeliveryDateLabel">
@@ -1978,7 +1916,7 @@
               <Left>5.15393in</Left>
               <Height>11pt</Height>
               <Width>1.06551in</Width>
-              <ZIndex>30</ZIndex>
+              <ZIndex>28</ZIndex>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -2008,7 +1946,7 @@
               <Left>6.21943in</Left>
               <Height>11pt</Height>
               <Width>0.94379in</Width>
-              <ZIndex>31</ZIndex>
+              <ZIndex>29</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_PONumber">
@@ -2034,7 +1972,7 @@
               <Left>6.21942in</Left>
               <Height>11pt</Height>
               <Width>0.94379in</Width>
-              <ZIndex>32</ZIndex>
+              <ZIndex>30</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_Incoterm">
@@ -2060,7 +1998,7 @@
               <Left>6.21943in</Left>
               <Height>11pt</Height>
               <Width>0.94379in</Width>
-              <ZIndex>33</ZIndex>
+              <ZIndex>31</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_PONumberLabel">
@@ -2085,7 +2023,7 @@
               <Left>5.15392in</Left>
               <Height>11pt</Height>
               <Width>1.06551in</Width>
-              <ZIndex>34</ZIndex>
+              <ZIndex>32</ZIndex>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -2114,7 +2052,7 @@
               <Left>5.15393in</Left>
               <Height>11pt</Height>
               <Width>1.06551in</Width>
-              <ZIndex>35</ZIndex>
+              <ZIndex>33</ZIndex>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -2128,7 +2066,7 @@
               <Left>0.02228in</Left>
               <Height>0.65225in</Height>
               <Width>2.4in</Width>
-              <ZIndex>36</ZIndex>
+              <ZIndex>34</ZIndex>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -2160,7 +2098,7 @@
               <Left>0.05369in</Left>
               <Height>0.17448in</Height>
               <Width>0.99697in</Width>
-              <ZIndex>37</ZIndex>
+              <ZIndex>35</ZIndex>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -2198,7 +2136,7 @@
               <Left>1.05066in</Left>
               <Height>0.17448in</Height>
               <Width>3.06684in</Width>
-              <ZIndex>38</ZIndex>
+              <ZIndex>36</ZIndex>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -2236,7 +2174,7 @@
               <Left>4.10866in</Left>
               <Height>0.17448in</Height>
               <Width>0.62886in</Width>
-              <ZIndex>39</ZIndex>
+              <ZIndex>37</ZIndex>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -2274,7 +2212,7 @@
               <Left>4.75141in</Left>
               <Height>0.17448in</Height>
               <Width>0.56065in</Width>
-              <ZIndex>40</ZIndex>
+              <ZIndex>38</ZIndex>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -2312,7 +2250,7 @@
               <Left>5.32595in</Left>
               <Height>0.17448in</Height>
               <Width>0.57435in</Width>
-              <ZIndex>41</ZIndex>
+              <ZIndex>39</ZIndex>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -2350,7 +2288,7 @@
               <Left>5.9003in</Left>
               <Height>0.17448in</Height>
               <Width>0.61863in</Width>
-              <ZIndex>42</ZIndex>
+              <ZIndex>40</ZIndex>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -2388,7 +2326,7 @@
               <Left>6.51893in</Left>
               <Height>0.17448in</Height>
               <Width>0.63179in</Width>
-              <ZIndex>43</ZIndex>
+              <ZIndex>41</ZIndex>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -2424,7 +2362,7 @@
               <Left>6.21944in</Left>
               <Height>11pt</Height>
               <Width>0.94379in</Width>
-              <ZIndex>44</ZIndex>
+              <ZIndex>42</ZIndex>
               <Style />
             </Textbox>
             <Textbox Name="AFI_IncotermLabel2">
@@ -2446,6 +2384,64 @@
                 </Paragraph>
               </Paragraphs>
               <Top>1.5601in</Top>
+              <Left>5.15393in</Left>
+              <Height>11pt</Height>
+              <Width>1.06551in</Width>
+              <ZIndex>43</ZIndex>
+              <Style>
+                <Border>
+                  <Style>None</Style>
+                </Border>
+              </Style>
+            </Textbox>
+            <Textbox Name="InvoiceNumberCaption">
+              <KeepTogether>true</KeepTogether>
+              <Paragraphs>
+                <Paragraph>
+                  <TextRuns>
+                    <TextRun>
+                      <Value>Invoice Number</Value>
+                      <Style>
+                        <FontFamily>Segoe UI</FontFamily>
+                        <FontSize>8pt</FontSize>
+                      </Style>
+                    </TextRun>
+                  </TextRuns>
+                  <Style>
+                    <TextAlign>Left</TextAlign>
+                  </Style>
+                </Paragraph>
+              </Paragraphs>
+              <Top>0.79156in</Top>
+              <Left>5.15393in</Left>
+              <Height>11pt</Height>
+              <Width>1.06551in</Width>
+              <ZIndex>44</ZIndex>
+              <Style>
+                <Border>
+                  <Style>None</Style>
+                </Border>
+              </Style>
+            </Textbox>
+            <Textbox Name="InvoiceDateCaption">
+              <KeepTogether>true</KeepTogether>
+              <Paragraphs>
+                <Paragraph>
+                  <TextRuns>
+                    <TextRun>
+                      <Value>Invoice Date</Value>
+                      <Style>
+                        <FontFamily>Segoe UI</FontFamily>
+                        <FontSize>8pt</FontSize>
+                      </Style>
+                    </TextRun>
+                  </TextRuns>
+                  <Style>
+                    <TextAlign>Left</TextAlign>
+                  </Style>
+                </Paragraph>
+              </Paragraphs>
+              <Top>0.94609in</Top>
               <Left>5.15393in</Left>
               <Height>11pt</Height>
               <Width>1.06551in</Width>
@@ -2504,7 +2500,7 @@
                         <FontFamily>Segoe UI</FontFamily>
                         <FontSize>8pt</FontSize>
                         <FontWeight>Bold</FontWeight>
-                        <Format>#,##0.00</Format>
+                        <Format>'$'#,0.00;('$'#,0.00)</Format>
                       </Style>
                     </TextRun>
                   </TextRuns>
@@ -2522,7 +2518,12 @@
                 <Hidden>=IIF(Globals!PageNumber = Globals!TotalPages, False, True)</Hidden>
               </Visibility>
               <DataElementOutput>NoOutput</DataElementOutput>
-              <Style />
+              <Style>
+                <Border>
+                  <Style>None</Style>
+                </Border>
+                <rd:FormatSymbolCulture>en-US</rd:FormatSymbolCulture>
+              </Style>
             </Textbox>
             <Textbox Name="AFI_Tax">
               <KeepTogether>true</KeepTogether>
